# crewai-poc

./: .env.example  .gitignore  CONDA_SETUP.md  LICENSE  LLM_SETUP.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  cleanup.bat  create_sample_ifc.py  crew.py  crewai-poc.md  environment.yml  main.py  pyproject.toml  requirements.txt  setup.py  setup_conda.bat  setup_conda.sh
agents/: parser_agent.py  reporter_agent.py  rule_checker_agent.py  visualiser_agent.py
config/: building_codes.json  contextual_rules.md  exceptions.json
crew/: __init__.py  agents.py  tasks.py
scripts/: demo.py  generate_ifc_files.py  generate_ifc_visualization.py
test_data/: README.md  bad_panel.ifc  good_panel.ifc  sample_wall.ifc  wall_1.ifc  wall_2.ifc
tools/: crew_tools.py  deterministic_checker.py  ifc_parser_tool.py  llm_prompts.py  llm_rule_checker.py  output_parser.py  remediation_applier.py  reporter_tool.py  rule_checker_tool.py  simple_tools.py  svg_annotator.py  violation_merger.py  visualiser_tool.py  visualizer_tool.py
