[project]
name = "crewai-poc"
version = "0.1.0"
description = "Hybrid QC implementation using CrewAI - deterministic rules + LLM analysis for wall panels"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.28.0",
    "crewai-tools>=0.2.0",
    "ifcopenshell>=0.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
